# ware-viz

./: .gitignore  README.md  ROADMAP.md  demo.py  pyproject.toml  ware_viz_specification.md
data/: allocations.csv  locations.csv  parts.csv
src/ware_viz/: __init__.py  visualizer.py
tests/: test_visualizer.py
